working on mine :)

--- a/compose.yaml
+++ b/compose.yaml
@@ -132,7 +132,7 @@ services:
         healthcheck:
             test: ["CMD-SHELL", "sh -c 'pg_isready -U postgres --dbname manager_db'"]
             interval: 10s
-            timeout: 3s
+            timeout: 5s
             retries: 3
         networks:       
             - custom
@@ -156,7 +156,7 @@ services:
         healthcheck:
             test: ["CMD-SHELL", "sh -c 'pg_isready -U postgres --dbname manager_db'"]
             interval: 10s
-            timeout: 3s
+            timeout: 5s
             retries: 3
         networks:       
             - custom
@@ -173,11 +173,12 @@ services:
         restart: always
         volumes:
                 - ../data/main_db_three:/var/lib/postgresql/data
-                - ../data/main_db_one:/tmp/postgres_read_1
-                - ../data/main_db_two:/tmp/postgres_read_2
+                - ../data/main_db_one:/var/lib/postgresql/data_read_1
+                - ../data/main_db_two:/var/lib/postgresql/data_read_2
                 - ./our-postgres.conf:/etc/postgresql/postgresql.conf
                 - ./our-pg_hba.conf:/etc/postgresql/pg_hba.conf
-                - ./init-db.sh:/docker-entrypoint-initdb.d/init-db.sh
+                # - ./init-db.sh:/docker-entrypoint-initdb.d/init-db.sh
+                - ./init-db.sh:/etc/postgresql/init-script/init-db.sh
 
         hostname: main_db_three
         environment:
@@ -188,7 +189,7 @@ services:
         healthcheck:
             test: ["CMD-SHELL", "sh -c 'pg_isready -U postgres --dbname manager_db'"]
             interval: 10s
-            timeout: 3s
+            timeout: 5s
             retries: 3
         networks:       
             - custom
@@ -206,7 +207,7 @@ services:
         healthcheck:
             test: ["CMD-SHELL", "sh -c 'pg_isready -U postgres --dbname db_one'"]
             interval: 10s
-            timeout: 3s
+            timeout: 5s
             retries: 3
         networks:       
             - custom
@@ -224,7 +225,7 @@ services:
         healthcheck:
             test: ["CMD-SHELL", "sh -c 'pg_isready -U postgres --dbname db_two'"]
             interval: 10s
-            timeout: 3s
+            timeout: 5s
             retries: 3
         networks:       
             - custom
@@ -242,7 +243,7 @@ services:
         healthcheck:
             test: ["CMD-SHELL", "sh -c 'pg_isready -U postgres --dbname db_three'"]
             interval: 10s
-            timeout: 3s
+            timeout: 5s
             retries: 3
         networks:       
             - custom
