--- a/nginx.conf
+++ b/nginx.conf
@@ -19,7 +19,7 @@ http {
 
      server {
           location /topics{
-               proxy_pass http://topics_$request_method;
+               proxy_pass http://topics_POST;
                proxy_redirect          off;
                proxy_next_upstream     error timeout invalid_header http_500;
                proxy_connect_timeout   2;
@@ -28,7 +28,7 @@ http {
                proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
           }
           location /topics/partitions{
-               proxy_pass http://read_manager/topics/partitions;
+               proxy_pass http://write_manager/topics/partitions;
                proxy_redirect          off;
                proxy_next_upstream     error timeout invalid_header http_500;
                proxy_connect_timeout   2;
@@ -65,6 +65,42 @@ http {
           }
           location /producer/produce{
                proxy_pass http://write_manager/producer/produce;
+               proxy_redirect          off;
+               proxy_next_upstream     error timeout invalid_header http_500;
+               proxy_connect_timeout   2;
+               proxy_set_header        Host            $host;
+               proxy_set_header        X-Real-IP       $remote_addr;
+               proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+          }
+          location /broker/register{
+               proxy_pass http://write_manager/broker/register;
+               proxy_redirect          off;
+               proxy_next_upstream     error timeout invalid_header http_500;
+               proxy_connect_timeout   2;
+               proxy_set_header        Host            $host;
+               proxy_set_header        X-Real-IP       $remote_addr;
+               proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+          }
+          location /broker/receive_beat{
+               proxy_pass http://write_manager/broker/receive_beat;
+               proxy_redirect          off;
+               proxy_next_upstream     error timeout invalid_header http_500;
+               proxy_connect_timeout   2;
+               proxy_set_header        Host            $host;
+               proxy_set_header        X-Real-IP       $remote_addr;
+               proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+          }
+          location /consumer/offset{
+               proxy_pass http://write_manager/consumer/offset;
+               proxy_redirect          off;
+               proxy_next_upstream     error timeout invalid_header http_500;
+               proxy_connect_timeout   2;
+               proxy_set_header        Host            $host;
+               proxy_set_header        X-Real-IP       $remote_addr;
+               proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+          }
+          location /size {
+               proxy_pass http://read_manager/size;
                proxy_redirect          off;
                proxy_next_upstream     error timeout invalid_header http_500;
                proxy_connect_timeout   2;
